[package]
name = "md-lambda"
version = "0.1.0"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.1"
serde = "1.0.84"
serde_json = "1.0.34"
serde_derive = "1.0.84"
log = "0.4.6"
simple_logger = "1.0.1"
comrak = "0.4.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
