[package]
name = "mdbda"
version = "0.1.0"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]
edition = "2018"

[dependencies]
comrak = "0.4.0"
lambda_runtime = "0.1"
log = "0.4.6"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
simple_logger = "1.0.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
